--- a/src/pages/ja/c/[category].astro
+++ b/src/pages/ja/c/[category].astro
@@ -86,6 +86,14 @@ const theme = getCategoryTheme(category);
         <button
           type="button"
           class="acg-chip rounded-full px-3 py-1 text-xs font-semibold clickable"
+          data-quick-toggle="only-followed-sources"
+          data-active="false"
+        >
+          {t("ja", "prefs.followedSourcesOnly")}
+        </button>
+        <button
+          type="button"
+          class="acg-chip rounded-full px-3 py-1 text-xs font-semibold clickable"
           data-quick-toggle="hide-read"
           data-active="false"
         >
