chore: preconnect wsrv 以提升封面兜底命中

--- a/src/layouts/SiteLayout.astro
+++ b/src/layouts/SiteLayout.astro
@@ -44,6 +44,7 @@ const isLatest = currentPath === "/" || currentPath?.startsWith("/c/") === true;
     <meta name="theme-color" content="#f2f4f8" />
     <link rel="icon" type="image/svg+xml" href={href("/favicon.svg")} />
     <link rel="preconnect" href="https://images.weserv.nl" crossorigin />
+    <link rel="preconnect" href="https://wsrv.nl" crossorigin />
   </head>
   <body data-current-post-id={currentPostId}>
     <header
