--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,7 @@ import { href } from "../lib/href";
     <meta name="theme-color" content="#f2f4f8" />
     <link rel="icon" type="image/svg+xml" href={href("/favicon.svg")} />
     <link rel="preconnect" href="https://images.weserv.nl" crossorigin />
+    <link rel="preconnect" href="https://wsrv.nl" crossorigin />
   </head>
   <body>
     <main class="mx-auto max-w-3xl px-4 py-12">
