--- a/src/pages/ja/about.astro
+++ b/src/pages/ja/about.astro
@@ -34,7 +34,7 @@ const sources = SOURCES.map((s) => {
       <li>更新：毎時（UTCの00分）</li>
       <li>表示：タイトル/要約/日時/リンクのみ（全文転載しません）</li>
       <li>個人機能：ブックマーク/既読/検索はブラウザ内（localStorage）</li>
-      <li>購読：★ でソースをフォロー → 「フォローしたソースのみ」で一括フィルター</li>
+      <li>購読：星マークでソースをフォロー → 「フォローしたソースのみ」で一括フィルター</li>
       <li>ステータス：各ソースの取得状況は「ステータス」ページで確認</li>
     </ul>
 
