--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -7,6 +7,7 @@ import { href } from "../lib/href";
 import { formatDateTime, formatRelativeHours } from "../lib/format";
 import { resolveCover } from "../lib/cover";
 import CategoryIcon from "./CategoryIcon.astro";
+import Icon from "./Icon.astro";
 import SourceBadge from "./SourceBadge.astro";
 
 type Props = {
@@ -96,7 +97,7 @@ const freshLabel = lang === "ja" ? "新着" : "NEW";
     aria-label={retryCoverLabel}
     title={retryCoverLabel}
   >
-    <span aria-hidden="true">↻</span>
+    <Icon name="refresh" size={18} />
   </button>
 
   <div class="p-4 sm:p-5">
@@ -120,7 +121,9 @@ const freshLabel = lang === "ja" ? "新着" : "NEW";
         aria-pressed="false"
         title="Bookmark"
       >
-        <span data-bookmark-label>☆</span>
+        <span data-bookmark-icon aria-hidden="true">
+          <Icon name="star" size={18} />
+        </span>
       </button>
     </div>
 
